# tdx-editor

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json  vite.config.ts
.github/workflows/: pages.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: TdxCodeEditor.tsx
src/hooks/: useAutoSave.ts  useEditorDocument.ts  useTdxFile.ts
src/platform/: index.ts  shared.ts  tauriFilePlatform.ts  webFilePlatform.ts
src/tdx/: codemirror.ts  sample.ts
src/types/: editor.ts
